--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@repo/order-db": "workspace:*",
+    "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
